2009-02-22  Andrea Cimitan  <andrea.cimitan@gmail.com

	* schema/murrine.xml.in.in:
	* src/murrine_draw.c (murrine_draw_classic_focus),
	(murrine_draw_focus), (murrine_register_style_murrine):
	* src/murrine_rc_style.c (murrine_rc_style_init),
	(murrine_rc_style_parse), (murrine_rc_style_merge):
	* src/murrine_rc_style.h:
	* src/murrine_style.c (murrine_style_draw_box),
	(murrine_style_init_from_rc), (murrine_style_draw_focus),
	(murrine_style_copy):
	* src/murrine_style.h:
	* src/murrine_types.h:
	First implementation of the focus drawing.
	Maybe not amazing as clearlooks's focus, but this focus is 
	compatible with much more colorschemes.

2009-02-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_scrollbar_slider):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_scrollbar_slider):
	Less shade on prelighted scrollbar slider.

2009-02-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_scrollbar_slider):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_scrollbar_slider):
	* src/murrine_style.c (murrine_style_draw_box):
	Align scrollbar's handles.

2009-02-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_tab):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_tab):
	* src/murrine_style.c (murrine_style_draw_box):
	Draw rounded scrollbar's sliders when trough-under-steppers is 0.

2009-01-24  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_scale_trough):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_scale_trough):
	* src/murrine_style.c (murrine_style_draw_box):
	* src/murrine_types.h:
	Added support for GtkScale::trough-side-details and fill-level.
	This will break old themes (the scale's trough).
	To update your theme, please add this in the gtkrc:
	GtkScale::trough-side-details = 1

2009-01-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_shadow):